--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "torchaudio==2.9.1+cu128",
   "torchcodec===0.8.1",
   "transformers==5.0.0",
+  "accelerate>=1.0.0",
   "safetensors==0.6.2",
   "numpy==2.1.0",
   "orjson==3.11.4",
